fix: sidebar alignment in style

--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  align-items: start left;
-  text-align: start left;
+  align-items: flex-start;
+  text-align: left;
 }
 
 .profile-image {
